--- a/Account/Register.xaml
+++ b/Account/Register.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="Cloudsdale.Account.SetName"
+    x:Class="Cloudsdale.Account.Register"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -11,8 +11,7 @@
     Foreground="#3a3a3a"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
-    shell:SystemTray.IsVisible="True"
-    shell:SystemTray.Opacity="0">
+    shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="{StaticResource PortraitBackground}">
@@ -22,11 +21,17 @@
         </Grid.RowDefinitions>
         
         <TextBlock Foreground="White" FontSize="72" Margin="15" 
-                   HorizontalAlignment="Center">Pick a name</TextBlock>
+                   HorizontalAlignment="Center">Register</TextBlock>
         
-        <StackPanel Grid.Row="1">
-            <TextBox Height="75" VerticalAlignment="Top" Margin="0,175,0,0" Name="Username" />
-            <Button Foreground="#3a3a3a" BorderBrush="#3a3a3a" Margin="50" Click="DoneClick">Done</Button>
+        <StackPanel Grid.Row="1" Margin="12,0">
+            <TextBlock FontSize="42">Email</TextBlock>
+            <TextBox Name="Email" InputScope="EmailNameOrAddress" />
+            <TextBlock FontSize="42">Password</TextBlock>
+            <PasswordBox Name="Password" />
+            <TextBlock FontSize="42">Username</TextBlock>
+            <TextBox Name="Username" />
+            <Button Foreground="#3a3a3a" Click="CreateAccountClick" 
+                    BorderBrush="#3a3a3a" Name="CreateButton">Create Account</Button>
         </StackPanel>
     </Grid>
 
