--- a/Account/TermsAndConditions.xaml
+++ b/Account/TermsAndConditions.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage 
-    x:Class="Cloudsdale.Account.SetName"
+    x:Class="Cloudsdale.Account.TermsAndConditions"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -15,19 +15,18 @@
     shell:SystemTray.Opacity="0">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="{StaticResource PortraitBackground}">
+    <Grid x:Name="LayoutRoot" Background="#EAEAEA">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        
-        <TextBlock Foreground="White" FontSize="72" Margin="15" 
-                   HorizontalAlignment="Center">Pick a name</TextBlock>
-        
-        <StackPanel Grid.Row="1">
-            <TextBox Height="75" VerticalAlignment="Top" Margin="0,175,0,0" Name="Username" />
-            <Button Foreground="#3a3a3a" BorderBrush="#3a3a3a" Margin="50" Click="DoneClick">Done</Button>
-        </StackPanel>
+        <phone:WebBrowser Source="http://www.cloudsdale.org/terms-and-conditions?layout=mobile" />
+        <Grid Grid.Row="1">
+            <Button Margin="0,0,240,0" Foreground="Green" BorderBrush="Green"
+                    Click="AcceptClick">Accept</Button>
+            <Button Margin="240,0,0,0" Foreground="Red" BorderBrush="Red"
+                    Click="RejectClick">Reject</Button>
+        </Grid>
     </Grid>
 
 </phone:PhoneApplicationPage>
