--- a/App.xaml
+++ b/App.xaml
@@ -14,6 +14,7 @@
             </ResourceDictionary.MergedDictionaries>
             <Controls:StatusColorConverter x:Key="SCC" />
             <Managers:ArrayHasAnyVis x:Key="AHAV" />
+            <Managers:PromoOrDemo x:Key="POD" />
         </ResourceDictionary>
     </Application.Resources>
 
