--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -69,13 +69,12 @@
                         <Run Text="{Binding Path=CorrectedTimestamp}" />
                         <Run Text="{Binding Path=DeviceStub}" FontSize="16" />
                     </TextBlock>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*" />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <ItemsControl DataContext="{Binding}" ItemsSource="{Binding Path=Split}" 
-                                  Margin="60,20,0,0">
+                    <Grid Margin="60,20,0,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <ItemsControl Grid.Row="1" DataContext="{Binding}" ItemsSource="{Binding Path=Split}">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
                                     <TextBlock DataContext="{Binding}" Text="{Binding Path=Text}" 
@@ -84,7 +83,7 @@
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
-                        <ItemsControl Grid.Column="1" ItemsSource="{Binding Path=Drops}" Margin="0,20,0,0">
+                        <ItemsControl Grid.Row="0" ItemsSource="{Binding Path=Drops}" HorizontalAlignment="Left">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
                                     <toolkit:WrapPanel ItemWidth="110" ItemHeight="85" MaxWidth="220" />
