--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -86,7 +86,7 @@
                         <ItemsControl Grid.Row="0" ItemsSource="{Binding Path=Drops}" HorizontalAlignment="Left">
                             <ItemsControl.ItemsPanel>
                                 <ItemsPanelTemplate>
-                                    <toolkit:WrapPanel ItemWidth="110" ItemHeight="85" MaxWidth="330" />
+                                    <toolkit:WrapPanel ItemWidth="110" ItemHeight="85" />
                                 </ItemsPanelTemplate>
                             </ItemsControl.ItemsPanel>
                             <ItemsControl.ItemTemplate>
