--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -28,24 +28,20 @@
 
         <Grid x:Name="ContentPanel" Margin="12,150,12,0" Visibility="Visible">
             <TextBox InputScope="EmailNameOrAddress" Name="UserBox" VerticalAlignment="Top" 
-                     Margin="40,145,0,0" />
-            <PasswordBox Name="PassBox" VerticalAlignment="Top" Margin="40,235,0,0" />
-            <TextBlock Text="Email" FontSize="36" Margin="0,105,0,0" Height="50" 
+                     Margin="40,120,0,0" />
+            <PasswordBox Name="PassBox" VerticalAlignment="Top" Margin="40,210,0,0" />
+            <TextBlock Text="Email" FontSize="36" Margin="0,80,0,0" Height="50" 
                        VerticalAlignment="Top" />
-            <TextBlock Text="Password" FontSize="36" Margin="0,200,0,0" Height="50" 
+            <TextBlock Text="Password" FontSize="36" Margin="0,175,0,0" Height="50" 
                        VerticalAlignment="Top" />
-            <Button x:Name="emailbtn" VerticalAlignment="Bottom" Margin="111,0,111,185" 
-                    Height="75" Content="Login" Click="LoginClick"
-                    Foreground="#FF555555" BorderBrush="#FF555555"  />
-            <Button x:Name="fbbtn" VerticalAlignment="Bottom" Margin="2,0,0,120" Height="75" 
-                    Content="Facebook" Click="FacebookClick" HorizontalAlignment="Left" 
-                    Width="234" Foreground="#FF555555" BorderBrush="#FF555555" />
+            <Button x:Name="emailbtn" VerticalAlignment="Bottom" Margin="2,0,220,250"
+                    Height="75" Content="Login" Click="LoginClick" />
+            <Button x:Name="createbtn" VerticalAlignment="Bottom" Margin="220,0,2,250"
+                    Height="75" Content="Create Account" Click="CreateClick" />
+            <Button x:Name="fbbtn" VerticalAlignment="Bottom" Margin="2,0,2,120" Height="75" 
+                    Content="Login with Facebook" Click="FacebookClick"/>
             <Button x:Name="twitterbtn" IsEnabled="False" VerticalAlignment="Bottom" 
-                    Margin="220,0,2,120" Height="75" Content="Twitter" Click="TwitterClick"
-                    Foreground="#FF555555" BorderBrush="#FF555555"/>
-            <Button x:Name="createbtn" VerticalAlignment="Bottom" Margin="55,0,55,50"
-                    Height="75" Foreground="#FF555555" BorderBrush="#FF555555"
-                    Content="Create Account" Click="CreateClick"/>
+                    Margin="2,0,2,45" Height="75" Content="Login with Twitter" Click="TwitterClick"/>
         </Grid>
     </Grid>
 
