Dat system tray color
And dem content updates... IT BREAKS SHIT

--- a/Avatars/ChangeAvatar.xaml
+++ b/Avatars/ChangeAvatar.xaml
@@ -13,7 +13,8 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
     shell:SystemTray.IsVisible="True"
-    shell:SystemTray.Opacity="0">
+     shell:SystemTray.ForegroundColor="White" 
+    shell:SystemTray.BackgroundColor="#FF1A91DB">
 
     <Grid x:Name="LayoutRoot" Background="{StaticResource PortraitBackground}">
         <Grid.RowDefinitions>
