--- a/Account/SetName.xaml
+++ b/Account/SetName.xaml
@@ -12,7 +12,8 @@
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
     shell:SystemTray.IsVisible="True"
-    shell:SystemTray.Opacity="0">
+     shell:SystemTray.ForegroundColor="White" 
+    shell:SystemTray.BackgroundColor="#FF1A91DB">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="{StaticResource PortraitBackground}">
