--- a/Home.xaml
+++ b/Home.xaml
@@ -15,7 +15,8 @@
     Foreground="Black"
     SupportedOrientations="Portrait"  Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
-    shell:SystemTray.Opacity="0" shell:SystemTray.ForegroundColor="White" shell:SystemTray.BackgroundColor="Black">
+    shell:SystemTray.Opacity="1"  shell:SystemTray.ForegroundColor="White" 
+    shell:SystemTray.BackgroundColor="#FF1A91DB">
 
     <phone:PhoneApplicationPage.Resources>
         <ResourceDictionary>
