--- a/EditCloud.xaml
+++ b/EditCloud.xaml
@@ -11,9 +11,8 @@
     Foreground="Black"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
-    shell:SystemTray.IsVisible="True"  
-    shell:SystemTray.ForegroundColor="White" 
-    shell:SystemTray.BackgroundColor="#FF1A91DB">
+    shell:SystemTray.IsVisible="True" shell:SystemTray.Opacity="0" 
+    shell:SystemTray.ForegroundColor="White" shell:SystemTray.BackgroundColor="Black">
 
     <Grid x:Name="LayoutRoot">
         <Grid.Background>
