--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -12,8 +12,8 @@
     Foreground="#FF404040"
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="True"
-     shell:SystemTray.ForegroundColor="White" 
-    shell:SystemTray.BackgroundColor="#FF1A91DB">
+    shell:SystemTray.Opacity="0" shell:SystemTray.ForegroundColor="White" 
+    shell:SystemTray.BackgroundColor="Black">
 
     <Grid x:Name="LayoutRoot">
         <Grid.Background>
